--- a/core/templates/ranking_categoria.html
+++ b/core/templates/ranking_categoria.html
@@ -12,19 +12,19 @@
                                 </div>
                                 <div class="col-lg-6 col-md-6 col-sm-6 text-right mt-1">
                                     <p class="font-17px">{{ row.clasificacion }}</p>
-                                    <p class="font-17px info-box-number">{{ row.asignado|floatformat:2|intcomma }}</p>
+                                    <p class="info-box-number">{{ row.asignado|floatformat:2|intcomma }}</p>
                                 </div>
                             </div>
                         </div>
                     {% elif forloop.last %}
-                        <div class="col-lg-12 col-md-12 col-sm-12 draw">
+                        <div class="col-lg-offset-5 col-md-offset-5 col-sm-offset-5 col-lg-7 col-md-7 col-sm-7 draw">
                             <div class="row">
-                                <div class="col-lg-6 col-md-6 col-sm-6 text-center mt-1 pt-0_8">
+                                <div class="col-lg-5 col-md-5 col-sm-5 text-center mt-1 pt-0_8">
                                     <span class="font-35px">{{ forloop.counter }}</span>
                                 </div>
-                                <div class="col-lg-6 col-md-6 col-sm-6 text-right mt-1">
+                                <div class="col-lg-7 col-md-7 col-sm-7 text-right mt-1">
                                     <p class="font-17px">{{ row.clasificacion }}</p>
-                                    <p class="font-17px info-box-number">{{ row.asignado|floatformat:2|intcomma }}</p>
+                                    <p class="info-box-number">{{ row.asignado|floatformat:2|intcomma }}</p>
                                 </div>
                             </div>
                         </div>
@@ -40,20 +40,20 @@
                                 </div>
                                 <div class="col-lg-6 col-md-6 col-sm-6 text-right mt-1">
                                     <p class="font-17px">{{ row.clasificacion }}</p>
-                                    <p class="font-17px info-box-number">{{ row.ejecutado|floatformat:2|intcomma }}
+                                    <p class="info-box-number">{{ row.ejecutado|floatformat:2|intcomma }}
                                         M. de C&oacute;rdobas</p>
                                 </div>
                             </div>
                         </div>
                     {% elif forloop.last %}
-                        <div class="col-lg-12 col-md-12 col-sm-12 draw">
+                        <div class="col-lg-offset-5 col-md-offset-5 col-sm-offset-5 col-lg-7 col-md-7 col-sm-7 draw">
                             <div class="row">
-                                <div class="col-lg-6 col-md-6 col-sm-6 text-center mt-1 pt-0_8">
+                                <div class="col-lg-5 col-md-5 col-sm-5 text-center mt-1 pt-0_8">
                                     <span class="font-35px">{{ forloop.counter }}</span>
                                 </div>
-                                <div class="col-lg-6 col-md-6 col-sm-6 text-right mt-1">
+                                <div class="col-lg-7 col-md-7 col-sm-7 text-right mt-1">
                                     <p class="font-17px">{{ row.clasificacion }}</p>
-                                    <p class="font-17px info-box-number">{{ row.ejecutado|floatformat:2|intcomma }}
+                                    <p class="info-box-number">{{ row.ejecutado|floatformat:2|intcomma }}
                                         M. de C&oacute;rdobas</p>
                                 </div>
                             </div>
