--- a/core/static/css/own.css
+++ b/core/static/css/own.css
@@ -9,6 +9,7 @@
 .font-17px {
     font-size: 17px;
 }
+
 .font-35px {
     font-size: 35px;
 }
@@ -23,7 +24,7 @@
     min-height: 500px;
 }
 
-.height-horizontal-bar div#bar_horizontal{
+.height-horizontal-bar div#bar_horizontal {
     height: 100%;
 }
 
@@ -43,7 +44,7 @@
     margin-top: 1em;
 }
 
-.pt-0_8{
+.pt-0_8 {
     padding-top: 0.8em;
 }
 
@@ -175,22 +176,22 @@
     margin-top: 1em;
 }
 
-.draw {
-    height: 110px;
-    margin-top: 1em;
+#greater-middle-lower .row div {
     border-bottom-left-radius: 50px;
     border-top-left-radius: 50px;
-    background-color: pink;
+    color: white;
+    height: 110px;
+    margin-top: 1em;
 }
 
-#greater-middle-lower .draw:nth-child(1) {
-    background-image: linear-gradient(10deg, #5f5355 35%, #55494b 50%, #413537 60%);
+.first-child {
+    background-color: #999;
 }
 
-#greater-middle-lower .draw:nth-child(2) {
-    background: linear-gradient(10deg, #7d7e80 35%, #7b7c7e 50%, #696a6c 60%);
+.middle-child {
+    background-color: #2b7ab3;
 }
 
-#greater-middle-lower .draw:nth-child(3) {
-    background: linear-gradient(10deg, #ec3f4c 35%, #ec3642 50%, #ea212c 60%);
+.last-child {
+    background-color: #d65162;
 }
