--- a/core/templates/ranking_categoria.html
+++ b/core/templates/ranking_categoria.html
@@ -5,9 +5,9 @@
             {% if periodo_list|keyvalue:year == 'I' %}
                 {% for row in porclasep|dictsortreversed:'asignado' %}
                     {% if forloop.first %}
-                        <div class="col-lg-12 col-md-12 col-sm-12 draw">
+                        <div class="col-lg-12 col-md-12 col-sm-12 first-child">
                             <div class="row">
-                                <div class="col-lg-6 col-md-6 col-sm-6 text-center mt-1 pt-0_8">
+                                <div class="col-lg-6 col-md-6 col-sm-6 text-center mt-1">
                                     <span class="font-35px">{{ forloop.counter }}</span>
                                 </div>
                                 <div class="col-lg-6 col-md-6 col-sm-6 text-right mt-1">
@@ -17,9 +17,9 @@
                             </div>
                         </div>
                     {% elif forloop.last %}
-                        <div class="col-lg-offset-5 col-md-offset-5 col-sm-offset-5 col-lg-7 col-md-7 col-sm-7 draw">
+                        <div class="col-lg-offset-5 col-md-offset-5 col-sm-offset-5 col-lg-7 col-md-7 col-sm-7 last-child">
                             <div class="row">
-                                <div class="col-lg-5 col-md-5 col-sm-5 text-center mt-1 pt-0_8">
+                                <div class="col-lg-5 col-md-5 col-sm-5 text-center mt-1">
                                     <span class="font-35px">{{ forloop.counter }}</span>
                                 </div>
                                 <div class="col-lg-7 col-md-7 col-sm-7 text-right mt-1">
@@ -33,9 +33,9 @@
             {% else %}
                 {% for row in porclasep|dictsortreversed:'ejecutado' %}
                     {% if forloop.first %}
-                        <div class="col-lg-12 col-md-12 col-sm-12 draw">
+                        <div class="col-lg-12 col-md-12 col-sm-12 first-child">
                             <div class="row">
-                                <div class="col-lg-6 col-md-6 col-sm-6 text-center mt-1 pt-0_8">
+                                <div class="col-lg-6 col-md-6 col-sm-6 text-center mt-1">
                                     <span class="font-35px">{{ forloop.counter }}</span>
                                 </div>
                                 <div class="col-lg-6 col-md-6 col-sm-6 text-right mt-1">
@@ -46,9 +46,9 @@
                             </div>
                         </div>
                     {% elif forloop.last %}
-                        <div class="col-lg-offset-5 col-md-offset-5 col-sm-offset-5 col-lg-7 col-md-7 col-sm-7 draw">
+                        <div class="col-lg-offset-5 col-md-offset-5 col-sm-offset-5 col-lg-7 col-md-7 col-sm-7 last-child">
                             <div class="row">
-                                <div class="col-lg-5 col-md-5 col-sm-5 text-center mt-1 pt-0_8">
+                                <div class="col-lg-5 col-md-5 col-sm-5 text-center mt-1">
                                     <span class="font-35px">{{ forloop.counter }}</span>
                                 </div>
                                 <div class="col-lg-7 col-md-7 col-sm-7 text-right mt-1">
