--- a/core/templates/ranking_municipio.html
+++ b/core/templates/ranking_municipio.html
@@ -7,12 +7,15 @@
                     {% if forloop.first and municipio|lower == row.gasto__municipio__slug|lower or forloop.first and municipio|lower == row.ingreso__municipio__nombre|lower or forloop.first and municipio|lower == row.inversion__municipio__nombre|lower %}
                         <div class="col-lg-12 col-md-12 col-sm-12 first-child">
                             <div class="row">
-                                <div class="col-lg-6 col-md-6 col-sm-6 text-center mt-1">
-                                    <span class="font-35px">{{ forloop.counter }}</span>
+                                <div class="col-lg-6 col-md-6 col-sm-6 text-center m-0">
+                                    Posici&oacute;n
+                                    <br>
+                                    <span class="font-30px">{{ forloop.counter }}</span>
                                 </div>
-                                <div class="col-lg-6 col-md-6 col-sm-6 text-right mt-1">
+                                <div class="col-lg-6 col-md-6 col-sm-6 text-right m-0">
                                     <p class="font-17px">
-                                        {% firstof row.gasto__municipio__slug row.ingreso__municipio__nombre row.inversion__municipio__nombre %}
+                                        Mi municipio:
+                                        <strong>{% firstof row.gasto__municipio__slug row.ingreso__municipio__nombre row.inversion__municipio__nombre %}</strong>
                                     </p>
                                     <p class="info-box-number">
                                         {{ row.asignado_percent|floatformat:2|intcomma }}
@@ -24,10 +27,12 @@
                     {% elif forloop.first %}
                         <div class="col-lg-12 col-md-12 col-sm-12 first-child">
                             <div class="row">
-                                <div class="col-lg-6 col-md-6 col-sm-6 text-center mt-1">
-                                    <span class="font-35px">{{ forloop.counter }}</span>
+                                <div class="col-lg-6 col-md-6 col-sm-6 text-center m-0">
+                                    Posici&oacute;n
+                                    <br>
+                                    <span class="font-30px">{{ forloop.counter }}</span>
                                 </div>
-                                <div class="col-lg-6 col-md-6 col-sm-6 text-right mt-1">
+                                <div class="col-lg-6 col-md-6 col-sm-6 text-right m-0">
                                     <p class="font-17px">
                                         {% firstof row.gasto__municipio__slug row.ingreso__municipio__nombre row.inversion__municipio__nombre %}
                                     </p>
@@ -41,12 +46,15 @@
                     {% elif  municipio|lower == row.gasto__municipio__slug|lower or municipio|lower == row.ingreso__municipio__nombre|lower or municipio|lower == row.inversion__municipio__nombre|lower %}
                         <div class="col-lg-offset-2 col-md-offset-2 col-sm-offset-2 col-lg-10 col-md-10 col-sm-10 middle-child">
                             <div class="row">
-                                <div class="col-lg-5 col-md-5 col-sm-5 text-center mt-1">
-                                    <span class="font-35px">{{ forloop.counter }}</span>
+                                <div class="col-lg-5 col-md-5 col-sm-5 text-center m-0">
+                                    Posici&oacute;n
+                                    <br>
+                                    <span class="font-30px">{{ forloop.counter }}</span>
                                 </div>
-                                <div class="col-lg-7 col-md-7 col-sm-7 text-right mt-1">
+                                <div class="col-lg-7 col-md-7 col-sm-7 text-right m-0">
                                     <p class="font-17px">
-                                        {% firstof row.gasto__municipio__slug row.ingreso__municipio__nombre row.inversion__municipio__nombre %}
+                                        Mi municipio:
+                                        <strong>{% firstof row.gasto__municipio__slug row.ingreso__municipio__nombre row.inversion__municipio__nombre %}</strong>
                                     </p>
                                     <p class="info-box-number">
                                         {{ row.asignado_percent|floatformat:2|intcomma }}
@@ -60,10 +68,12 @@
                     {% if forloop.last %}
                         <div class="col-lg-offset-5 col-md-offset-5 col-sm-offset-5 col-lg-7 col-md-7 col-sm-7 last-child">
                             <div class="row">
-                                <div class="col-lg-5 col-md-5 col-sm-5 text-center mt-1">
-                                    <span class="font-35px">{{ forloop.counter }}</span>
+                                <div class="col-lg-5 col-md-5 col-sm-5 text-center m-0">
+                                    Posici&oacute;n
+                                    <br>
+                                    <span class="font-30px">{{ forloop.counter }}</span>
                                 </div>
-                                <div class="col-lg-7 col-md-7 col-sm-7 text-right mt-1">
+                                <div class="col-lg-7 col-md-7 col-sm-7 text-right m-0">
                                     <p class="font-17px">
                                         {% firstof row.gasto__municipio__slug row.ingreso__municipio__nombre row.inversion__municipio__nombre %}
                                     </p>
@@ -81,25 +91,32 @@
                     {% if forloop.first and municipio|lower == row.gasto__municipio__slug|lower or forloop.first and municipio|lower == row.ingreso__municipio__nombre|lower or forloop.first and municipio|lower == row.inversion__municipio__nombre|lower %}
                         <div class="col-lg-12 col-md-12 col-sm-12 first-child">
                             <div class="row">
-                                <div class="col-lg-6 col-md-6 col-sm-6 text-center mt-1">
-                                    <span class="font-35px">{{ forloop.counter }}</span>
+                                <div class="col-lg-6 col-md-6 col-sm-6 text-center m-0">
+                                    Posici&oacute;n
+                                    <br>
+                                    <span class="font-30px">{{ forloop.counter }}</span>
                                 </div>
-                                <div class="col-lg-6 col-md-6 col-sm-6 text-right mt-1">
+                                <div class="col-lg-6 col-md-6 col-sm-6 text-right m-0">
                                     <p class="font-17px">
-                                        {% firstof row.gasto__municipio__slug row.ingreso__municipio__nombre row.inversion__municipio__nombre %}
+                                        Mi municipio:
+                                        <strong> {% firstof row.gasto__municipio__slug row.ingreso__municipio__nombre row.inversion__municipio__nombre %}</strong>
                                     </p>
-                                    <p class="info-box-number">{{ row.ejecutado_percent|floatformat:2|intcomma }}
-                                        M. de C&oacute;rdobas</p>
+                                    <p class="info-box-number">
+                                        {{ row.ejecutado_percent|floatformat:2|intcomma }}
+                                        M. de C&oacute;rdobas
+                                    </p>
                                 </div>
                             </div>
                         </div>
                     {% elif forloop.first %}
                         <div class="col-lg-12 col-md-12 col-sm-12 first-child">
                             <div class="row">
-                                <div class="col-lg-6 col-md-6 col-sm-6 text-center mt-1">
-                                    <span class="font-35px">{{ forloop.counter }}</span>
+                                <div class="col-lg-6 col-md-6 col-sm-6 text-center m-0">
+                                    Posici&oacute;n
+                                    <br>
+                                    <span class="font-30px">{{ forloop.counter }}</span>
                                 </div>
-                                <div class="col-lg-6 col-md-6 col-sm-6 text-right mt-1">
+                                <div class="col-lg-6 col-md-6 col-sm-6 text-right m-0">
                                     <p class="font-17px">
                                         {% firstof row.gasto__municipio__slug row.ingreso__municipio__nombre row.inversion__municipio__nombre %}
                                     </p>
@@ -111,12 +128,15 @@
                     {% elif  municipio|lower == row.gasto__municipio__slug|lower or municipio|lower == row.ingreso__municipio__nombre|lower or municipio|lower == row.inversion__municipio__nombre|lower %}
                         <div class="col-lg-offset-2 col-md-offset-2 col-sm-offset-2 col-lg-10 col-md-10 col-sm-10 middle-child">
                             <div class="row">
-                                <div class="col-lg-5 col-md-5 col-sm-5 text-center mt-1">
-                                    <span class="font-35px">{{ forloop.counter }}</span>
+                                <div class="col-lg-5 col-md-5 col-sm-5 text-center m-0">
+                                    Posici&oacute;n
+                                    <br>
+                                    <span class="font-30px">{{ forloop.counter }}</span>
                                 </div>
-                                <div class="col-lg-7 col-md-7 col-sm-7 text-right mt-1">
+                                <div class="col-lg-7 col-md-7 col-sm-7 text-right m-0">
                                     <p class="font-17px">
-                                        {% firstof row.gasto__municipio__slug row.ingreso__municipio__nombre row.inversion__municipio__nombre %}
+                                        Mi municipio:
+                                        <strong>{% firstof row.gasto__municipio__slug row.ingreso__municipio__nombre row.inversion__municipio__nombre %}</strong>
                                     </p>
                                     <p class="info-box-number">{{ row.ejecutado_percent|floatformat:2|intcomma }}
                                         M. de C&oacute;rdobas</p>
@@ -128,10 +148,12 @@
                     {% if forloop.last %}
                         <div class="col-lg-offset-5 col-md-offset-5 col-sm-offset-5 col-lg-7 col-md-7 col-sm-7 last-child">
                             <div class="row">
-                                <div class="col-lg-5 col-md-5 col-sm-5 text-center mt-1">
-                                    <span class="font-35px">{{ forloop.counter }}</span>
+                                <div class="col-lg-5 col-md-5 col-sm-5 text-center m-0">
+                                    Posici&oacute;n
+                                    <br>
+                                    <span class="font-30px">{{ forloop.counter }}</span>
                                 </div>
-                                <div class="col-lg-7 col-md-7 col-sm-7 text-right mt-1">
+                                <div class="col-lg-7 col-md-7 col-sm-7 text-right m-0">
                                     <p class="font-17px">
                                         {% firstof row.gasto__municipio__slug row.ingreso__municipio__nombre row.inversion__municipio__nombre %}
                                     </p>
