--- a/core/templates/inversionpiechart.html
+++ b/core/templates/inversionpiechart.html
@@ -145,7 +145,7 @@
 
 {% block section2 %}
     {% if not municipio %}
-        <div class="loaded pma-gradient">
+        <div class="loaded">
             <div class="container">
                 <div class="row">
                     <div class="col-lg-6 col-md-6 col-sm-12">
@@ -237,7 +237,7 @@
         </div>
     {% endif %}
     {% if municipio %}
-        <div class="loaded pma-gradient inverted">
+        <div class="loaded">
             <div class="container">
                 <div class="row">
                     <div class="{% if municipio|lower == 'managua' %} col-lg-12 col-md-12 col-sm-12 {% else %} col-lg-6 col-md-6 col-sm-12 {% endif %}">
