--- a/core/templates/oim_chart.html
+++ b/core/templates/oim_chart.html
@@ -82,7 +82,7 @@
 
 {% block section2 %}
     {% if not municipio %}
-        <div class="loaded pma-bg-gray">
+        <div class="loaded">
             <div class="container">
                 <div class="row">
                     <div class="col-lg-6 col-md-6 col-sm-12">
@@ -236,7 +236,7 @@
 
 {% block section3 %}
     {% if municipio %}
-        <div class="loaded pma-bg-gray inverted">
+        <div class="loaded inverted">
             <div class="container">
                 <div class="row">
                     <div class="{% if municipio|lower == 'managua' %} col-lg-12 col-md-12 col-sm-12 {% else %} col-lg-6 col-md-6 col-sm-12 {% endif %}">
