--- a/core/templates/ranking_categoria.html
+++ b/core/templates/ranking_categoria.html
@@ -7,10 +7,12 @@
                     {% if forloop.first %}
                         <div class="col-lg-12 col-md-12 col-sm-12 first-child">
                             <div class="row">
-                                <div class="col-lg-6 col-md-6 col-sm-6 text-center mt-1">
-                                    <span class="font-35px">{{ forloop.counter }}</span>
+                                <div class="col-lg-4 col-md-4 col-sm-4 text-center m-0">
+                                    Posici&oacute;n
+                                    <br>
+                                    <span class="font-30px">{{ forloop.counter }}</span>
                                 </div>
-                                <div class="col-lg-6 col-md-6 col-sm-6 text-right mt-1">
+                                <div class="col-lg-8 col-md-8 col-sm-8 text-right m-0">
                                     <p class="font-17px">{{ row.clasificacion }}</p>
                                     <p class="info-box-number">{{ row.asignado|floatformat:2|intcomma }}</p>
                                 </div>
@@ -19,10 +21,12 @@
                     {% elif forloop.last %}
                         <div class="col-lg-offset-5 col-md-offset-5 col-sm-offset-5 col-lg-7 col-md-7 col-sm-7 last-child">
                             <div class="row">
-                                <div class="col-lg-5 col-md-5 col-sm-5 text-center mt-1">
-                                    <span class="font-35px">{{ forloop.counter }}</span>
+                                <div class="col-lg-5 col-md-5 col-sm-5 text-center m-0">
+                                    Posici&oacute;n
+                                    <br>
+                                    <span class="font-30px">{{ forloop.counter }}</span>
                                 </div>
-                                <div class="col-lg-7 col-md-7 col-sm-7 text-right mt-1">
+                                <div class="col-lg-7 col-md-7 col-sm-7 text-right m-0">
                                     <p class="font-17px">{{ row.clasificacion }}</p>
                                     <p class="info-box-number">{{ row.asignado|floatformat:2|intcomma }}</p>
                                 </div>
@@ -35,10 +39,12 @@
                     {% if forloop.first %}
                         <div class="col-lg-12 col-md-12 col-sm-12 first-child">
                             <div class="row">
-                                <div class="col-lg-6 col-md-6 col-sm-6 text-center mt-1">
-                                    <span class="font-35px">{{ forloop.counter }}</span>
+                                <div class="col-lg-4 col-md-4 col-sm-4 text-center m-0">
+                                    Posici&oacute;n
+                                    <br>
+                                    <span class="font-30px">{{ forloop.counter }}</span>
                                 </div>
-                                <div class="col-lg-6 col-md-6 col-sm-6 text-right mt-1">
+                                <div class="col-lg-8 col-md-8 col-sm-8 text-right m-0">
                                     <p class="font-17px">{{ row.clasificacion }}</p>
                                     <p class="info-box-number">{{ row.ejecutado|floatformat:2|intcomma }}
                                         M. de C&oacute;rdobas</p>
@@ -48,10 +54,12 @@
                     {% elif forloop.last %}
                         <div class="col-lg-offset-5 col-md-offset-5 col-sm-offset-5 col-lg-7 col-md-7 col-sm-7 last-child">
                             <div class="row">
-                                <div class="col-lg-5 col-md-5 col-sm-5 text-center mt-1">
-                                    <span class="font-35px">{{ forloop.counter }}</span>
+                                <div class="col-lg-5 col-md-5 col-sm-5 text-center m-0">
+                                    Posici&oacute;n
+                                    <br>
+                                    <span class="font-30px">{{ forloop.counter }}</span>
                                 </div>
-                                <div class="col-lg-7 col-md-7 col-sm-7 text-right mt-1">
+                                <div class="col-lg-7 col-md-7 col-sm-7 text-right m-0">
                                     <p class="font-17px">{{ row.clasificacion }}</p>
                                     <p class="info-box-number">{{ row.ejecutado|floatformat:2|intcomma }}
                                         M. de C&oacute;rdobas</p>
@@ -61,7 +69,6 @@
                     {% endif %}
                 {% endfor %}
             {% endif %}
-
         </div>
     </div>
 </div>
