--- a/core/templates/ranking_municipio.html
+++ b/core/templates/ranking_municipio.html
@@ -4,18 +4,18 @@
         <div class="row">
             {% if periodo_list|keyvalue:year == 'I' %}
                 {% for row in otros|dictsortreversed:'asignado_percent' %}
-                    {% if forloop.first and municipio|lower == row.gasto__municipio__slug|lower or forloop.first and municipio|lower == row.ingreso__municipio__nombre|lower or forloop.first and municipio|lower == row.inversion__municipio__nombre|lower %}
+                    {% if forloop.first and municipio|lower == row.gasto__municipio__nombre|lower or forloop.first and municipio|lower == row.ingreso__municipio__nombre|lower or forloop.first and municipio|lower == row.inversion__municipio__nombre|lower %}
                         <div class="col-lg-12 col-md-12 col-sm-12 first-child">
                             <div class="row">
-                                <div class="col-lg-6 col-md-6 col-sm-6 text-center m-0">
+                                <div class="col-lg-4 col-md-4 col-sm-4 text-center m-0">
                                     Posici&oacute;n
                                     <br>
                                     <span class="font-30px">{{ forloop.counter }}</span>
                                 </div>
-                                <div class="col-lg-6 col-md-6 col-sm-6 text-right m-0">
+                                <div class="col-lg-8 col-md-8 col-sm-8 text-right m-0">
                                     <p class="font-17px">
                                         Mi municipio:
-                                        <strong>{% firstof row.gasto__municipio__slug row.ingreso__municipio__nombre row.inversion__municipio__nombre %}</strong>
+                                        <strong>{% firstof row.gasto__municipio__nombre row.ingreso__municipio__nombre row.inversion__municipio__nombre %}</strong>
                                     </p>
                                     <p class="info-box-number">
                                         {{ row.asignado_percent|floatformat:2|intcomma }}
@@ -34,7 +34,7 @@
                                 </div>
                                 <div class="col-lg-6 col-md-6 col-sm-6 text-right m-0">
                                     <p class="font-17px">
-                                        {% firstof row.gasto__municipio__slug row.ingreso__municipio__nombre row.inversion__municipio__nombre %}
+                                        {% firstof row.gasto__municipio__nombre row.ingreso__municipio__nombre row.inversion__municipio__nombre %}
                                     </p>
                                     <p class="info-box-number">
                                         {{ row.asignado_percent|floatformat:2|intcomma }}
@@ -43,7 +43,7 @@
                                 </div>
                             </div>
                         </div>
-                    {% elif  municipio|lower == row.gasto__municipio__slug|lower or municipio|lower == row.ingreso__municipio__nombre|lower or municipio|lower == row.inversion__municipio__nombre|lower %}
+                    {% elif  municipio|lower == row.gasto__municipio__nombre|lower or municipio|lower == row.ingreso__municipio__nombre|lower or municipio|lower == row.inversion__municipio__nombre|lower %}
                         <div class="col-lg-offset-2 col-md-offset-2 col-sm-offset-2 col-lg-10 col-md-10 col-sm-10 middle-child">
                             <div class="row">
                                 <div class="col-lg-5 col-md-5 col-sm-5 text-center m-0">
@@ -52,9 +52,9 @@
                                     <span class="font-30px">{{ forloop.counter }}</span>
                                 </div>
                                 <div class="col-lg-7 col-md-7 col-sm-7 text-right m-0">
-                                    <p class="font-17px">
+                                    <p class="font-17px {% if row.gasto__municipio__nombre|length > 21 or row.ingreso__municipio__nombre|length > 21 or row.inversion__municipio__nombre|length > 21 %}mb-0{% endif %}">
                                         Mi municipio:
-                                        <strong>{% firstof row.gasto__municipio__slug row.ingreso__municipio__nombre row.inversion__municipio__nombre %}</strong>
+                                        <strong>{% firstof row.gasto__municipio__nombre row.ingreso__municipio__nombre row.inversion__municipio__nombre %}</strong>
                                     </p>
                                     <p class="info-box-number">
                                         {{ row.asignado_percent|floatformat:2|intcomma }}
@@ -75,7 +75,7 @@
                                 </div>
                                 <div class="col-lg-7 col-md-7 col-sm-7 text-right m-0">
                                     <p class="font-17px">
-                                        {% firstof row.gasto__municipio__slug row.ingreso__municipio__nombre row.inversion__municipio__nombre %}
+                                        {% firstof row.gasto__municipio__nombre row.ingreso__municipio__nombre row.inversion__municipio__nombre %}
                                     </p>
                                     <p class="info-box-number">
                                         {{ row.asignado_percent|floatformat:2|intcomma }}
@@ -88,18 +88,18 @@
                 {% endfor %}
             {% else %}
                 {% for row in otros|dictsortreversed:'ejecutado_percent' %}
-                    {% if forloop.first and municipio|lower == row.gasto__municipio__slug|lower or forloop.first and municipio|lower == row.ingreso__municipio__nombre|lower or forloop.first and municipio|lower == row.inversion__municipio__nombre|lower %}
+                    {% if forloop.first and municipio|lower == row.gasto__municipio__nombre|lower or forloop.first and municipio|lower == row.ingreso__municipio__nombre|lower or forloop.first and municipio|lower == row.inversion__municipio__nombre|lower %}
                         <div class="col-lg-12 col-md-12 col-sm-12 first-child">
                             <div class="row">
-                                <div class="col-lg-6 col-md-6 col-sm-6 text-center m-0">
+                                <div class="col-lg-4 col-md-4 col-sm-4 text-center m-0">
                                     Posici&oacute;n
                                     <br>
                                     <span class="font-30px">{{ forloop.counter }}</span>
                                 </div>
-                                <div class="col-lg-6 col-md-6 col-sm-6 text-right m-0">
-                                    <p class="font-17px">
+                                <div class="col-lg-8 col-md-8 col-sm-8 text-right m-0">
+                                    <p class="font-17px {% if row.gasto__municipio__nombre|length > 21 or row.ingreso__municipio__nombre|length > 21 or row.inversion__municipio__nombre|length > 21 %}mb-0{% endif %}">
                                         Mi municipio:
-                                        <strong> {% firstof row.gasto__municipio__slug row.ingreso__municipio__nombre row.inversion__municipio__nombre %}</strong>
+                                        <strong> {% firstof row.gasto__municipio__nombre row.ingreso__municipio__nombre row.inversion__municipio__nombre %}</strong>
                                     </p>
                                     <p class="info-box-number">
                                         {{ row.ejecutado_percent|floatformat:2|intcomma }}
@@ -118,14 +118,14 @@
                                 </div>
                                 <div class="col-lg-6 col-md-6 col-sm-6 text-right m-0">
                                     <p class="font-17px">
-                                        {% firstof row.gasto__municipio__slug row.ingreso__municipio__nombre row.inversion__municipio__nombre %}
+                                        {% firstof row.gasto__municipio__nombre row.ingreso__municipio__nombre row.inversion__municipio__nombre %}
                                     </p>
                                     <p class="info-box-number">{{ row.ejecutado_percent|floatformat:2|intcomma }}
                                         M. de C&oacute;rdobas</p>
                                 </div>
                             </div>
                         </div>
-                    {% elif  municipio|lower == row.gasto__municipio__slug|lower or municipio|lower == row.ingreso__municipio__nombre|lower or municipio|lower == row.inversion__municipio__nombre|lower %}
+                    {% elif  municipio|lower == row.gasto__municipio__nombre|lower or municipio|lower == row.ingreso__municipio__nombre|lower or municipio|lower == row.inversion__municipio__nombre|lower %}
                         <div class="col-lg-offset-2 col-md-offset-2 col-sm-offset-2 col-lg-10 col-md-10 col-sm-10 middle-child">
                             <div class="row">
                                 <div class="col-lg-5 col-md-5 col-sm-5 text-center m-0">
@@ -134,9 +134,9 @@
                                     <span class="font-30px">{{ forloop.counter }}</span>
                                 </div>
                                 <div class="col-lg-7 col-md-7 col-sm-7 text-right m-0">
-                                    <p class="font-17px">
+                                    <p class="font-17px {% if row.gasto__municipio__nombre|length > 21 or row.ingreso__municipio__nombre|length > 21 or row.inversion__municipio__nombre|length > 21 %}mb-0{% endif %}">
                                         Mi municipio:
-                                        <strong>{% firstof row.gasto__municipio__slug row.ingreso__municipio__nombre row.inversion__municipio__nombre %}</strong>
+                                        <strong>{% firstof row.gasto__municipio__nombre row.ingreso__municipio__nombre row.inversion__municipio__nombre %}</strong>
                                     </p>
                                     <p class="info-box-number">{{ row.ejecutado_percent|floatformat:2|intcomma }}
                                         M. de C&oacute;rdobas</p>
@@ -155,7 +155,7 @@
                                 </div>
                                 <div class="col-lg-7 col-md-7 col-sm-7 text-right m-0">
                                     <p class="font-17px">
-                                        {% firstof row.gasto__municipio__slug row.ingreso__municipio__nombre row.inversion__municipio__nombre %}
+                                        {% firstof row.gasto__municipio__nombre row.ingreso__municipio__nombre row.inversion__municipio__nombre %}
                                     </p>
                                     <p class="info-box-number">{{ row.ejecutado_percent|floatformat:2|intcomma }}
                                         M. de C&oacute;rdobas</p>
