--- a/core/templates/ranking_municipio.html
+++ b/core/templates/ranking_municipio.html
@@ -63,9 +63,7 @@
                                 </div>
                             </div>
                         </div>
-                    {% endif %}
-
-                    {% if forloop.last %}
+                    {% elif forloop.last %}
                         <div class="col-lg-offset-5 col-md-offset-5 col-sm-offset-5 col-lg-7 col-md-7 col-sm-7 last-child">
                             <div class="row">
                                 <div class="col-lg-5 col-md-5 col-sm-5 text-center m-0">
@@ -143,9 +141,7 @@
                                 </div>
                             </div>
                         </div>
-                    {% endif %}
-
-                    {% if forloop.last %}
+                    {% elif forloop.last %}
                         <div class="col-lg-offset-5 col-md-offset-5 col-sm-offset-5 col-lg-7 col-md-7 col-sm-7 last-child">
                             <div class="row">
                                 <div class="col-lg-5 col-md-5 col-sm-5 text-center m-0">
