--- a/core/templates/base.html
+++ b/core/templates/base.html
@@ -127,6 +127,10 @@
 <script src="{% static 'js/ie10-viewport-bug-workaround.js' %}"></script>
 <!-- <script src="http://code.highcharts.com/4.1.1/highcharts-3d.js"></script> -->
 <!-- Empieza el slider. Tomado de http://bootsnipp.com -->
+
+{% block extras_js %}
+{% endblock %}
+
 <script type="text/javascript">
     (function ($) {
 
