--- a/core/templates/import_results.html
+++ b/core/templates/import_results.html
@@ -7,7 +7,7 @@ Municipio: {{ object.municipio }}
 <br/>
 Año: {{ object.anio }}
 <br/>
-Detalles: {{ object.ingresodetalle_set.count }} {{ object.gastodetalle_set.count }}
+Detalles: {{ object.ingresodetalle_set.count }} {{ object.gastodetalle_set.count }} {{ object.inversion.count }}
 <br/>
 Fecha de importación: {{ object.fecha }}
 <br/>
