html para grafico de semi dona en seccion de ranking oim_chart

--- a/core/templates/oim_chart.html
+++ b/core/templates/oim_chart.html
@@ -122,6 +122,30 @@
                     </div>
 
                 </div>
+                <div class="row">
+                    <div class="col-12 position-relative">
+                        <h5 class="title-center-info">Ranking de recaudaci&oacute;n
+                            por habitante categor&iacute;a</h5>
+                        <h4 class="title-center-category">
+                            Municipal "C"
+                        </h4>
+                        <hr class="line-underline-category">
+                        <h6 class="title-description">
+                            C&oacute;rdobas corrientes por habitante en base a ingresos ejecutados.
+                        </h6>
+                        <ul class="chart-skills">
+                            <li>
+                                <span>CSS</span>
+                            </li>
+                            <li>
+                                <span>HTML</span>
+                            </li>
+                            <li>
+                                <span>PHP</span>
+                            </li>
+                        </ul>
+                    </div>
+                </div>
             </div>
 
             <div class="events-content container text-center">
@@ -238,43 +262,43 @@
     {% if municipio %}
         <div class="loaded inverted">
             {% if municipio|lower == 'managua' %}
-	        <div class="container-fluid pma-bg-blue pma-fg-white text-center">
+                <div class="container-fluid pma-bg-blue pma-fg-white text-center">
                 <div class="row">
-		  <div class="col-lg-12 col-md-12 col-sm-12">
-                      <h2>
-                          <strong>La recaudaci&oacute;n por habitante</strong>
-			  para el municipio de <strong>{{ municipio }}</strong> <br />
-			  para el a&ntilde;o {{ year }} es de:
-			  <span class="amarillo pma-number">
+                    <div class="col-lg-12 col-md-12 col-sm-12">
+                        <h2>
+                            <strong>La recaudaci&oacute;n por habitante</strong>
+                            para el municipio de <strong>{{ municipio }}</strong> <br/>
+                            para el a&ntilde;o {{ year }} es de:
+                            <span class="amarillo pma-number">
                            {% if periodo_list|keyvalue:year == 'I' %}
-                             {{ otros.0.asignado_percent|intcomma }}
+                               {{ otros.0.asignado_percent|intcomma }}
                            {% else %}
-                              {{ otros.0.ejecutado_percent|intcomma }}
+                               {{ otros.0.ejecutado_percent|intcomma }}
                            {% endif %}
-                           C&oacute;rdobas
+                                C&oacute;rdobas
 			  </span>
-                      </h2>
-		      <h5> Córdobas corrientes por habitante en base a ingresos ejecutados </h5>
-                      <hr class="pma-line-5"/>
-		  </div>
-		</div>
+                        </h2>
+                        <h5> Córdobas corrientes por habitante en base a ingresos ejecutados </h5>
+                        <hr class="pma-line-5"/>
+                    </div>
+                </div>
             {% else %}
-	        <div class="container">
+                <div class="container">
                     <div class="col-lg-6 col-md-6 col-sm-12">
                         <h2>
                             <strong>Ranking de recaudaci&oacute;n </strong>
                             <br>
                             por habitante categor&iacute;a municipal
                             "{{ mi_clase.clasificacion }}"
-                                para el municipio de
-                                <strong>{{ municipio }}</strong>
-                                con
-                                {% if periodo_list|keyvalue:year == 'I' %}
-                                    {{ otros.0.asignado_percent|intcomma }}
-                                {% else %}
-                                    {{ otros.0.ejecutado_percent|intcomma }}
-                                {% endif %}
-                                Cordobas.
+                            para el municipio de
+                            <strong>{{ municipio }}</strong>
+                            con
+                            {% if periodo_list|keyvalue:year == 'I' %}
+                                {{ otros.0.asignado_percent|intcomma }}
+                            {% else %}
+                                {{ otros.0.ejecutado_percent|intcomma }}
+                            {% endif %}
+                            Cordobas.
                         </h2>
                         <h5>
                             C&oacute;rdobas corrientes por habitante en base a
