--- a/core/templates/_indicator.html
+++ b/core/templates/_indicator.html
@@ -15,6 +15,7 @@
     <link rel="stylesheet" type="text/css" href="{% static 'css/charts.css' %}"/>
     <link rel="stylesheet" type="text/css" href="{% static 'css/bubbletree.css' %}"/>
     <link rel="stylesheet" type="text/css" href="{% static 'css/horizontal-timeline.css' %}"/>
+    <link rel="stylesheet" type="text/css" href="{% static 'css/semi-donut-categories.css' %}"/>
 {% endblock %}
 
 {% block header %}
