--- a/core/templates/oim_chart.html
+++ b/core/templates/oim_chart.html
@@ -133,16 +133,20 @@
                         <h6 class="title-description">
                             C&oacute;rdobas corrientes por habitante en base a ingresos ejecutados.
                         </h6>
+
+                        <div class="balloon-dialog first-balloon-dialog">
+                            <div class="dialog-inside">
+                                <h1>01</h1>
+                            </div>
+                            <div class="first-ballon-horn"></div>
+                            <span class="name">MI MUNICIPIO Managua</span>
+                            <span class="number">200.80 M. de C&oacute;rdobas</span>
+                        </div>
+
                         <ul class="chart-skills">
-                            <li>
-                                <span>CSS</span>
-                            </li>
-                            <li>
-                                <span>HTML</span>
-                            </li>
-                            <li>
-                                <span>PHP</span>
-                            </li>
+                            <li></li>
+                            <li></li>
+                            <li></li>
                         </ul>
                     </div>
                 </div>
